<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="350dp"
    android:layout_height="160dp"
    android:paddingLeft="10dp" android:paddingRight="10dp" android:background="#fff" android:paddingTop="10dp">
    <CheckBox android:id="@+id/checkbox_noComer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reglaNoComer"
        />

    <CheckBox android:id="@+id/checkbox_noDormir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reglaNoDormir"
       />

    <CheckBox android:id="@+id/checkbox_noMusica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reglaNoMusica"
        />

    <CheckBox android:id="@+id/checkbox_noHablar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reglaNoHablar"
        />

</LinearLayout>