<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:weightSum="1">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_vertical"
        android:text="@string/defaultRide"
        android:id="@+id/rideNameText" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="D" android:layout_marginRight="5dp" android:id="@+id/sunday"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="L" android:layout_marginRight="5dp" android:id="@+id/monday"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="M" android:layout_marginRight="5dp" android:id="@+id/tuesday"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="M" android:layout_marginRight="5dp" android:id="@+id/wednesday"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="J" android:layout_marginRight="5dp" android:id="@+id/thursday"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="V" android:layout_marginRight="5dp" android:id="@+id/friday"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="S" android:layout_marginRight="5dp" android:id="@+id/saturday"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/depart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departTime"
                android:id="@+id/departTimeText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/arrive"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arriveTime"
                android:id="@+id/arriveTimeText" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>