<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="#c5dfdddd"
    tools:context=".RideActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/rideMap"
            tools:context="schnauzer.digital.autoamigo.MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:weightSum="1">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:hint="@string/rideHint"
                        android:id="@+id/rideNameEditText" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/editMap"
                        android:layout_weight="0.3"
                        android:id="@+id/editMapButton"/>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.2dp"
                    android:visibility="visible"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="5dp"
                    android:gravity="center_vertical"
                    android:id="@+id/departTimeButton">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/departTimeTitle"/>

                    <TextView
                        android:id="@+id/departTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/departTime" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.2dp"
                    android:visibility="visible"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="5dp"
                    android:gravity="center_vertical"
                    android:id="@+id/arriveTimeButton">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/arriveTimeTitle"/>

                    <TextView
                        android:id="@+id/arriveTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/arriveTime" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.2dp"
                    android:visibility="visible"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="5dp"
                    android:gravity="center_vertical"
                    android:id="@+id/daysButton">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/days"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingLeft="10dp">
                            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="L" android:layout_marginRight="5dp" android:id="@+id/monday"/>
                            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="M" android:layout_marginRight="5dp" android:id="@+id/tuesday"/>
                            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="M" android:layout_marginRight="5dp" android:id="@+id/wednesday"/>
                            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="J" android:layout_marginRight="5dp" android:id="@+id/thursday"/>
                            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="V" android:layout_marginRight="5dp" android:id="@+id/friday"/>
                            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="S" android:layout_marginRight="5dp" android:id="@+id/saturday"/>
                            <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="D" android:layout_marginRight="5dp" android:id="@+id/sunday"/>
                        </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.2dp"
                    android:visibility="visible"
                    android:background="@android:color/darker_gray"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deleteButton"
                    android:layout_weight="0.3"
                    android:id="@+id/deleteRideButton"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include
        android:layout_width="300dp"
        android:layout_height="match_parent"
        layout="@layout/navigation_drawer"
        android:layout_gravity="left|start" />


</android.support.v4.widget.DrawerLayout>
